Prevent scrollbar from shifting page content left

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,5 +1,6 @@
 html {
     height: 100vh;
+    padding-left: calc(100vw - 100%);
 }
 
 body {
